# termcolors

./: .gitignore  README.md  convert.py  deploy.sh  go.mod  main.go  main.py  manage.py  pyproject.toml  remote_deploy.sh  run.sh
example_themes/: alacritty.toml
home/: convert.py  models.py  views.py
home/management/commands/: downloadthemes.py  format.py  importthemes.py  lint.py
home/migrations/: 0001_initial.py  0002_remove_colorscheme_id_alter_colorscheme_path.py  0003_colorscheme_is_dark.py
home/templates/: home.html  neofetch.html  row.html  themeinfo.html  themes.html
home/templatetags/: home_extras.py
termcolors/: asgi.py  settings.py  urls.py  wsgi.py
theme/static_src/src/: styles.css
