[project]
name = "theme-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "John Higgins",email = "johnmatthiggins@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "django (>=5.1.7,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "django-browser-reload (>=1.18.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
